prql-compiler/tests/integration/snapshots/integration__tests__@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "duckdb::query_csv(&duckdb_conn, &sql)"
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---
a
-25
