prql-compiler/tests/integration/snapshots/integration__tests__@invoice_totals.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "duckdb::query_csv(&duckdb_conn, &sql)"
input_file: prql-compiler/tests/integration/queries/invoice_totals.prql
---
month,day,num_orders,num_tracks,total_price,running_total_num_tracks,num_tracks_last_week
2009-01,2009-01-01,1,2,1.98,2,
2009-01,2009-01-02,1,4,3.96,6,
2009-01,2009-01-03,1,6,5.94,12,
2009-01,2009-01-06,1,9,8.91,21,
2009-01,2009-01-11,1,14,13.860000000000001,35,
2009-01,2009-01-19,1,1,0.99,36,
2009-02,2009-02-01,2,4,3.96,4,
2009-02,2009-02-02,1,4,3.96,8,2
2009-02,2009-02-03,1,6,5.94,14,4
2009-02,2009-02-06,1,9,8.91,23,6
2009-02,2009-02-11,1,14,13.860000000000001,37,9
2009-02,2009-02-19,1,1,0.99,38,14
2009-03,2009-03-04,2,4,3.96,4,1
2009-03,2009-03-05,1,4,3.96,8,4
2009-03,2009-03-06,1,6,5.94,14,4
2009-03,2009-03-09,1,9,8.91,23,6
2009-03,2009-03-14,1,14,13.860000000000001,37,9
2009-03,2009-03-22,1,1,0.99,38,14
2009-04,2009-04-04,2,4,3.96,4,1
2009-04,2009-04-05,1,4,3.96,8,4
2009-04,2009-04-06,1,6,5.94,14,4
2009-04,2009-04-09,1,9,8.91,23,6
2009-04,2009-04-14,1,14,13.860000000000001,37,9
2009-04,2009-04-22,1,1,0.99,38,14
2009-05,2009-05-05,2,4,3.96,4,1
2009-05,2009-05-06,1,4,3.96,8,4
2009-05,2009-05-07,1,6,5.94,14,4
2009-05,2009-05-10,1,9,8.91,23,6
2009-05,2009-05-15,1,14,13.860000000000001,37,9
2009-05,2009-05-23,1,1,0.99,38,14
2009-06,2009-06-05,2,4,3.96,4,1
2009-06,2009-06-06,1,4,3.96,8,4
2009-06,2009-06-07,1,6,5.94,14,4
2009-06,2009-06-10,1,9,8.91,23,6
2009-06,2009-06-15,1,14,13.860000000000001,37,9
2009-06,2009-06-23,1,1,0.99,38,14
2009-07,2009-07-06,2,4,3.96,4,1
2009-07,2009-07-07,1,4,3.96,8,4
2009-07,2009-07-08,1,6,5.94,14,4
2009-07,2009-07-11,1,9,8.91,23,6
2009-07,2009-07-16,1,14,13.860000000000001,37,9
2009-07,2009-07-24,1,1,0.99,38,14
2009-08,2009-08-06,2,4,3.96,4,1
2009-08,2009-08-07,1,4,3.96,8,4
2009-08,2009-08-08,1,6,5.94,14,4
2009-08,2009-08-11,1,9,8.91,23,6
2009-08,2009-08-16,1,14,13.860000000000001,37,9
2009-08,2009-08-24,1,1,0.99,38,14
2009-09,2009-09-06,2,4,3.96,4,1
2009-09,2009-09-07,1,4,3.96,8,4
2009-09,2009-09-08,1,6,5.94,14,4
2009-09,2009-09-11,1,9,8.91,23,6
2009-09,2009-09-16,1,14,13.860000000000001,37,9
2009-09,2009-09-24,1,1,0.99,38,14
2009-10,2009-10-07,2,4,3.96,4,1
2009-10,2009-10-08,1,4,3.96,8,4
2009-10,2009-10-09,1,6,5.94,14,4
2009-10,2009-10-12,1,9,8.91,23,6
2009-10,2009-10-17,1,14,13.860000000000001,37,9
2009-10,2009-10-25,1,1,0.99,38,14
2009-11,2009-11-07,2,4,3.96,4,1
2009-11,2009-11-08,1,4,3.96,8,4
2009-11,2009-11-09,1,6,5.94,14,4
2009-11,2009-11-12,1,9,8.91,23,6
2009-11,2009-11-17,1,14,13.860000000000001,37,9
2009-11,2009-11-25,1,1,0.99,38,14
2009-12,2009-12-08,2,4,3.96,4,1
2009-12,2009-12-09,1,4,3.96,8,4
2009-12,2009-12-10,1,6,5.94,14,4
2009-12,2009-12-13,1,9,8.91,23,6
2009-12,2009-12-18,1,14,13.860000000000001,37,9
2009-12,2009-12-26,1,1,0.99,38,14
2010-01,2010-01-08,2,4,3.96,4,1
2010-01,2010-01-09,1,4,3.96,8,4
2010-01,2010-01-10,1,6,6.94,14,4
2010-01,2010-01-13,1,9,17.91,23,6
2010-01,2010-01-18,1,14,18.859999999999996,37,9
2010-01,2010-01-26,1,1,0.99,38,14
2010-02,2010-02-08,2,4,3.96,4,1
2010-02,2010-02-09,1,4,3.96,8,4
2010-02,2010-02-10,1,6,5.94,14,4
2010-02,2010-02-13,1,9,8.91,23,6
2010-02,2010-02-18,1,14,21.859999999999996,37,9
2010-02,2010-02-26,1,1,1.99,38,14
2010-03,2010-03-11,2,4,7.96,4,1
2010-03,2010-03-12,1,4,3.96,8,4
2010-03,2010-03-13,1,6,5.94,14,4
2010-03,2010-03-16,1,9,9.91,23,6
2010-03,2010-03-21,1,14,15.860000000000001,37,9
2010-03,2010-03-29,1,1,0.99,38,14
2010-04,2010-04-11,2,4,3.96,4,1
2010-04,2010-04-12,1,4,3.96,8,4
2010-04,2010-04-13,1,6,5.94,14,4
2010-04,2010-04-16,1,9,8.91,23,6
2010-04,2010-04-21,1,14,13.860000000000001,37,9
2010-04,2010-04-29,1,1,0.99,38,14
2010-05,2010-05-12,2,4,3.96,4,1
2010-05,2010-05-13,1,4,3.96,8,4
2010-05,2010-05-14,1,6,5.94,14,4
2010-05,2010-05-17,1,9,8.91,23,6
