prql-compiler/tests/integration/snapshots/integration__tests__rdbms@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: result_string
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---
-25

