prql-compiler/tests/integration/snapshots/integration__tests__rdbms@invoice_totals.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: result_string
input_file: prql-compiler/tests/integration/queries/invoice_totals.prql
---
2009-01,2009-01-01,1,2,1.98,2,
2009-01,2009-01-02,1,4,3.96,6,
2009-01,2009-01-03,1,6,5.94,12,
2009-01,2009-01-06,1,9,8.91,21,
2009-01,2009-01-11,1,14,13.86,35,
2009-01,2009-01-19,1,1,0.99,36,
2009-02,2009-02-01,2,4,3.96,4,
2009-02,2009-02-02,1,4,3.96,8,2
2009-02,2009-02-03,1,6,5.94,14,4
2009-02,2009-02-06,1,9,8.91,23,6
2009-02,2009-02-11,1,14,13.86,37,9
2009-02,2009-02-19,1,1,0.99,38,14
2009-03,2009-03-04,2,4,3.96,4,1
2009-03,2009-03-05,1,4,3.96,8,4
2009-03,2009-03-06,1,6,5.94,14,4
2009-03,2009-03-09,1,9,8.91,23,6
2009-03,2009-03-14,1,14,13.86,37,9
2009-03,2009-03-22,1,1,0.99,38,14
2009-04,2009-04-04,2,4,3.96,4,1
2009-04,2009-04-05,1,4,3.96,8,4
2009-04,2009-04-06,1,6,5.94,14,4
2009-04,2009-04-09,1,9,8.91,23,6
2009-04,2009-04-14,1,14,13.86,37,9
2009-04,2009-04-22,1,1,0.99,38,14
2009-05,2009-05-05,2,4,3.96,4,1
2009-05,2009-05-06,1,4,3.96,8,4
2009-05,2009-05-07,1,6,5.94,14,4
2009-05,2009-05-10,1,9,8.91,23,6
2009-05,2009-05-15,1,14,13.86,37,9
2009-05,2009-05-23,1,1,0.99,38,14
2009-06,2009-06-05,2,4,3.96,4,1
2009-06,2009-06-06,1,4,3.96,8,4
2009-06,2009-06-07,1,6,5.94,14,4
2009-06,2009-06-10,1,9,8.91,23,6
2009-06,2009-06-15,1,14,13.86,37,9
2009-06,2009-06-23,1,1,0.99,38,14
2009-07,2009-07-06,2,4,3.96,4,1
2009-07,2009-07-07,1,4,3.96,8,4
2009-07,2009-07-08,1,6,5.94,14,4
2009-07,2009-07-11,1,9,8.91,23,6
2009-07,2009-07-16,1,14,13.86,37,9
2009-07,2009-07-24,1,1,0.99,38,14
2009-08,2009-08-06,2,4,3.96,4,1
2009-08,2009-08-07,1,4,3.96,8,4
2009-08,2009-08-08,1,6,5.94,14,4
2009-08,2009-08-11,1,9,8.91,23,6
2009-08,2009-08-16,1,14,13.86,37,9
2009-08,2009-08-24,1,1,0.99,38,14
2009-09,2009-09-06,2,4,3.96,4,1
2009-09,2009-09-07,1,4,3.96,8,4
2009-09,2009-09-08,1,6,5.94,14,4
2009-09,2009-09-11,1,9,8.91,23,6
2009-09,2009-09-16,1,14,13.86,37,9
2009-09,2009-09-24,1,1,0.99,38,14
2009-10,2009-10-07,2,4,3.96,4,1
2009-10,2009-10-08,1,4,3.96,8,4
2009-10,2009-10-09,1,6,5.94,14,4
2009-10,2009-10-12,1,9,8.91,23,6
2009-10,2009-10-17,1,14,13.86,37,9
2009-10,2009-10-25,1,1,0.99,38,14
2009-11,2009-11-07,2,4,3.96,4,1
2009-11,2009-11-08,1,4,3.96,8,4
2009-11,2009-11-09,1,6,5.94,14,4
2009-11,2009-11-12,1,9,8.91,23,6
2009-11,2009-11-17,1,14,13.86,37,9
2009-11,2009-11-25,1,1,0.99,38,14
2009-12,2009-12-08,2,4,3.96,4,1
2009-12,2009-12-09,1,4,3.96,8,4
2009-12,2009-12-10,1,6,5.94,14,4
2009-12,2009-12-13,1,9,8.91,23,6
2009-12,2009-12-18,1,14,13.86,37,9
2009-12,2009-12-26,1,1,0.99,38,14
2010-01,2010-01-08,2,4,3.96,4,1
2010-01,2010-01-09,1,4,3.96,8,4
2010-01,2010-01-10,1,6,6.94,14,4
2010-01,2010-01-13,1,9,17.91,23,6
2010-01,2010-01-18,1,14,18.86,37,9
2010-01,2010-01-26,1,1,0.99,38,14
2010-02,2010-02-08,2,4,3.96,4,1
2010-02,2010-02-09,1,4,3.96,8,4
2010-02,2010-02-10,1,6,5.94,14,4
2010-02,2010-02-13,1,9,8.91,23,6
2010-02,2010-02-18,1,14,21.86,37,9
2010-02,2010-02-26,1,1,1.99,38,14
2010-03,2010-03-11,2,4,7.96,4,1
2010-03,2010-03-12,1,4,3.96,8,4
2010-03,2010-03-13,1,6,5.94,14,4
2010-03,2010-03-16,1,9,9.91,23,6
2010-03,2010-03-21,1,14,15.86,37,9
2010-03,2010-03-29,1,1,0.99,38,14
2010-04,2010-04-11,2,4,3.96,4,1
2010-04,2010-04-12,1,4,3.96,8,4
2010-04,2010-04-13,1,6,5.94,14,4
2010-04,2010-04-16,1,9,8.91,23,6
2010-04,2010-04-21,1,14,13.86,37,9
2010-04,2010-04-29,1,1,0.99,38,14
2010-05,2010-05-12,2,4,3.96,4,1
2010-05,2010-05-13,1,4,3.96,8,4
2010-05,2010-05-14,1,6,5.94,14,4
2010-05,2010-05-17,1,9,8.91,23,6
2010-05,2010-05-22,1,14,13.86,37,9
2010-05,2010-05-30,1,1,0.99,38,14
2010-06,2010-06-12,2,4,3.96,4,1
2010-06,2010-06-13,1,4,3.96,8,4
2010-06,2010-06-14,1,6,5.94,14,4
2010-06,2010-06-17,1,9,8.91,23,6
2010-06,2010-06-22,1,14,13.86,37,9
2010-06,2010-06-30,1,1,0.99,38,14
2010-07,2010-07-13,2,4,3.96,4,1
2010-07,2010-07-14,1,4,3.96,8,4
2010-07,2010-07-15,1,6,5.94,14,4
2010-07,2010-07-18,1,9,8.91,23,6
2010-07,2010-07-23,1,14,13.86,37,9
2010-07,2010-07-31,1,1,0.99,38,14
2010-08,2010-08-13,2,4,3.96,4,1
2010-08,2010-08-14,1,4,3.96,8,4
2010-08,2010-08-15,1,6,5.94,14,4
2010-08,2010-08-18,1,9,8.91,23,6
2010-08,2010-08-23,1,14,13.86,37,9
2010-08,2010-08-31,1,1,0.99,38,14
2010-09,2010-09-13,2,4,3.96,4,1
2010-09,2010-09-14,1,4,3.96,8,4
2010-09,2010-09-15,1,6,5.94,14,4
2010-09,2010-09-18,1,9,8.91,23,6
2010-09,2010-09-23,1,14,13.86,37,9
2010-10,2010-10-01,1,1,0.99,1,14
2010-10,2010-10-14,2,4,3.96,5,1
2010-10,2010-10-15,1,4,3.96,9,4
2010-10,2010-10-16,1,6,5.94,15,4
2010-10,2010-10-19,1,9,8.91,24,6
2010-10,2010-10-24,1,14,13.86,38,9
2010-11,2010-11-01,1,1,0.99,1,14
2010-11,2010-11-14,2,4,3.96,5,1
2010-11,2010-11-15,1,4,3.96,9,4
2010-11,2010-11-16,1,6,5.94,15,4
2010-11,2010-11-19,1,9,8.91,24,6
2010-11,2010-11-24,1,14,13.86,38,9
2010-12,2010-12-02,1,1,0.99,1,14
2010-12,2010-12-15,2,4,3.96,5,1
2010-12,2010-12-16,1,4,3.96,9,4
2010-12,2010-12-17,1,6,5.94,15,4
2010-12,2010-12-20,1,9,8.91,24,6
2010-12,2010-12-25,1,14,13.86,38,9
2011-01,2011-01-02,1,1,0.99,1,14
2011-01,2011-01-15,2,4,3.96,5,1
2011-01,2011-01-16,1,4,3.96,9,4
2011-01,2011-01-17,1,6,5.94,15,4
2011-01,2011-01-20,1,9,8.91,24,6
2011-01,2011-01-25,1,14,13.86,38,9
2011-02,2011-02-02,1,1,0.99,1,14
2011-02,2011-02-15,2,4,3.96,5,1
2011-02,2011-02-16,1,4,3.96,9,4
2011-02,2011-02-17,1,6,5.94,15,4
2011-02,2011-02-20,1,9,8.91,24,6
2011-02,2011-02-25,1,14,13.86,38,9
2011-03,2011-03-05,1,1,0.99,1,14
2011-03,2011-03-18,2,4,3.96,5,1
2011-03,2011-03-19,1,4,3.96,9,4
2011-03,2011-03-20,1,6,5.94,15,4
2011-03,2011-03-23,1,9,8.91,24,6
2011-03,2011-03-28,1,14,13.86,38,9
2011-04,2011-04-05,1,1,0.99,1,14
2011-04,2011-04-18,2,4,3.96,5,1
2011-04,2011-04-19,1,4,3.96,9,4
2011-04,2011-04-20,1,6,5.94,15,4
2011-04,2011-04-23,1,9,14.91,24,6
2011-04,2011-04-28,1,14,21.86,38,9
2011-05,2011-05-06,1,1,0.99,1,14
2011-05,2011-05-19,2,4,3.96,5,1
2011-05,2011-05-20,1,4,3.96,9,4
2011-05,2011-05-21,1,6,5.94,15,4
2011-05,2011-05-24,1,9,8.91,24,6
2011-05,2011-05-29,1,14,18.86,38,9
2011-06,2011-06-06,1,1,1.99,1,14
2011-06,2011-06-19,2,4,6.96,5,1
2011-06,2011-06-20,1,4,7.96,9,4
2011-06,2011-06-21,1,6,8.94,15,4
2011-06,2011-06-24,1,9,8.91,24,6
2011-06,2011-06-29,1,14,15.86,38,9
2011-07,2011-07-07,1,1,0.99,1,14
2011-07,2011-07-20,2,4,3.96,5,1
2011-07,2011-07-21,1,4,3.96,9,4
2011-07,2011-07-22,1,6,5.94,15,4
2011-07,2011-07-25,1,9,8.91,24,6
2011-07,2011-07-30,1,14,13.86,38,9
2011-08,2011-08-07,1,1,0.99,1,14
2011-08,2011-08-20,2,4,3.96,5,1
2011-08,2011-08-21,1,4,3.96,9,4
2011-08,2011-08-22,1,6,5.94,15,4
2011-08,2011-08-25,1,9,8.91,24,6
2011-08,2011-08-30,1,14,13.86,38,9
2011-09,2011-09-07,1,1,0.99,1,14
2011-09,2011-09-20,2,4,3.96,5,1
2011-09,2011-09-21,1,4,3.96,9,4
2011-09,2011-09-22,1,6,5.94,15,4
2011-09,2011-09-25,1,9,8.91,24,6
2011-09,2011-09-30,1,14,13.86,38,9
2011-10,2011-10-08,1,1,0.99,1,14
2011-10,2011-10-21,2,4,3.96,5,1
2011-10,2011-10-22,1,4,3.96,9,4
2011-10,2011-10-23,1,6,5.94,15,4
2011-10,2011-10-26,1,9,8.91,24,6
2011-10,2011-10-31,1,14,13.86,38,9
2011-11,2011-11-08,1,1,0.99,1,14
2011-11,2011-11-21,2,4,3.96,5,1
2011-11,2011-11-22,1,4,3.96,9,4
2011-11,2011-11-23,1,6,5.94,15,4
2011-11,2011-11-26,1,9,8.91,24,6
2011-12,2011-12-01,1,14,13.86,14,9
2011-12,2011-12-09,1,1,0.99,15,14
2011-12,2011-12-22,2,4,3.96,19,1
2011-12,2011-12-23,1,4,3.96,23,4
2011-12,2011-12-24,1,6,5.94,29,4
2011-12,2011-12-27,1,9,8.91,38,6
2012-01,2012-01-01,1,14,13.86,14,9
2012-01,2012-01-09,1,1,0.99,15,14
2012-01,2012-01-22,2,4,3.96,19,1
2012-01,2012-01-23,1,4,3.96,23,4
2012-01,2012-01-24,1,6,5.94,29,4
2012-01,2012-01-27,1,9,8.91,38,6
2012-02,2012-02-01,1,14,13.86,14,9
2012-02,2012-02-09,1,1,0.99,15,14
2012-02,2012-02-22,2,4,3.96,19,1
2012-02,2012-02-23,1,4,3.96,23,4
2012-02,2012-02-24,1,6,5.94,29,4
2012-02,2012-02-27,1,9,8.91,38,6
2012-03,2012-03-03,1,14,13.86,14,9
2012-03,2012-03-11,1,1,0.99,15,14
2012-03,2012-03-24,2,4,3.96,19,1
2012-03,2012-03-25,1,4,3.96,23,4
2012-03,2012-03-26,1,6,5.94,29,4
2012-03,2012-03-29,1,9,8.91,38,6
2012-04,2012-04-03,1,14,13.86,14,9
2012-04,2012-04-11,1,1,0.99,15,14
2012-04,2012-04-24,2,4,3.96,19,1
2012-04,2012-04-25,1,4,3.96,23,4
2012-04,2012-04-26,1,6,5.94,29,4
2012-04,2012-04-29,1,9,8.91,38,6
2012-05,2012-05-04,1,14,13.86,14,9
2012-05,2012-05-12,1,1,0.99,15,14
2012-05,2012-05-25,2,4,3.96,19,1
2012-05,2012-05-26,1,4,3.96,23,4
2012-05,2012-05-27,1,6,5.94,29,4
2012-05,2012-05-30,1,9,8.91,38,6
2012-06,2012-06-04,1,14,13.86,14,9
2012-06,2012-06-12,1,1,0.99,15,14
2012-06,2012-06-25,2,4,3.96,19,1
2012-06,2012-06-26,1,4,3.96,23,4
2012-06,2012-06-27,1,6,5.94,29,4
2012-06,2012-06-30,1,9,8.91,38,6
2012-07,2012-07-05,1,14,13.86,14,9
2012-07,2012-07-13,1,1,0.99,15,14
2012-07,2012-07-26,2,4,3.96,19,1
2012-07,2012-07-27,1,4,3.96,23,4
2012-07,2012-07-28,1,6,5.94,29,4
2012-07,2012-07-31,1,9,10.91,38,6
2012-08,2012-08-05,1,14,23.86,14,9
2012-08,2012-08-13,1,1,0.99,15,14
2012-08,2012-08-26,2,4,3.96,19,1
2012-08,2012-08-27,1,4,3.96,23,4
2012-08,2012-08-28,1,6,5.94,29,4
2012-08,2012-08-31,1,9,8.91,38,6
2012-09,2012-09-05,1,14,16.86,14,9
2012-09,2012-09-13,1,1,1.99,15,14
2012-09,2012-09-26,2,4,7.96,19,1
2012-09,2012-09-27,1,4,7.96,23,4
2012-09,2012-09-28,1,6,11.94,29,4
2012-10,2012-10-01,1,9,10.91,9,6
2012-10,2012-10-06,1,14,16.86,23,9
2012-10,2012-10-14,1,1,0.99,24,14
2012-10,2012-10-27,2,4,3.96,28,1
2012-10,2012-10-28,1,4,3.96,32,4
2012-10,2012-10-29,1,6,5.94,38,4
2012-11,2012-11-01,1,9,8.91,9,6
2012-11,2012-11-06,1,14,13.86,23,9
2012-11,2012-11-14,1,1,0.99,24,14
2012-11,2012-11-27,2,4,3.96,28,1
2012-11,2012-11-28,1,4,3.96,32,4
2012-11,2012-11-29,1,6,5.94,38,4
2012-12,2012-12-02,1,9,8.91,9,6
2012-12,2012-12-07,1,14,13.86,23,9
2012-12,2012-12-15,1,1,0.99,24,14
2012-12,2012-12-28,2,4,3.96,28,1
2012-12,2012-12-29,1,4,3.96,32,4
2012-12,2012-12-30,1,6,5.94,38,4
2013-01,2013-01-02,1,9,8.91,9,6
2013-01,2013-01-07,1,14,13.86,23,9
2013-01,2013-01-15,1,1,0.99,24,14
2013-01,2013-01-28,2,4,3.96,28,1
2013-01,2013-01-29,1,4,3.96,32,4
2013-01,2013-01-30,1,6,5.94,38,4
2013-02,2013-02-02,1,9,8.91,9,6
2013-02,2013-02-07,1,14,13.86,23,9
2013-02,2013-02-15,1,1,0.99,24,14
2013-02,2013-02-28,2,4,3.96,28,1
2013-03,2013-03-01,1,4,3.96,4,4
2013-03,2013-03-02,1,6,5.94,10,4
2013-03,2013-03-05,1,9,8.91,19,6
2013-03,2013-03-10,1,14,13.86,33,9
2013-03,2013-03-18,1,1,0.99,34,14
2013-03,2013-03-31,2,4,3.96,38,1
2013-04,2013-04-01,1,4,3.96,4,4
2013-04,2013-04-02,1,6,5.94,10,4
2013-04,2013-04-05,1,9,8.91,19,6
2013-04,2013-04-10,1,14,13.86,33,9
2013-04,2013-04-18,1,1,0.99,34,14
2013-05,2013-05-01,2,4,3.96,4,1
2013-05,2013-05-02,1,4,3.96,8,4
2013-05,2013-05-03,1,6,5.94,14,4
2013-05,2013-05-06,1,9,8.91,23,6
2013-05,2013-05-11,1,14,13.86,37,9
2013-05,2013-05-19,1,1,0.99,38,14
2013-06,2013-06-01,2,4,3.96,4,1
2013-06,2013-06-02,1,4,3.96,8,4
2013-06,2013-06-03,1,6,5.94,14,4
2013-06,2013-06-06,1,9,8.91,23,6
2013-06,2013-06-11,1,14,13.86,37,9
2013-06,2013-06-19,1,1,0.99,38,14
2013-07,2013-07-02,2,4,3.96,4,1
2013-07,2013-07-03,1,4,3.96,8,4
2013-07,2013-07-04,1,6,5.94,14,4
2013-07,2013-07-07,1,9,8.91,23,6
2013-07,2013-07-12,1,14,13.86,37,9
2013-07,2013-07-20,1,1,0.99,38,14
2013-08,2013-08-02,2,4,3.96,4,1
2013-08,2013-08-03,1,4,3.96,8,4
2013-08,2013-08-04,1,6,5.94,14,4
2013-08,2013-08-07,1,9,8.91,23,6
2013-08,2013-08-12,1,14,13.86,37,9
2013-08,2013-08-20,1,1,0.99,38,14
2013-09,2013-09-02,2,4,3.96,4,1
2013-09,2013-09-03,1,4,3.96,8,4
2013-09,2013-09-04,1,6,5.94,14,4
2013-09,2013-09-07,1,9,8.91,23,6
2013-09,2013-09-12,1,14,13.86,37,9
2013-09,2013-09-20,1,1,0.99,38,14
2013-10,2013-10-03,2,4,3.96,4,1
2013-10,2013-10-04,1,4,3.96,8,4
2013-10,2013-10-05,1,6,5.94,14,4
2013-10,2013-10-08,1,9,8.91,23,6
2013-10,2013-10-13,1,14,13.86,37,9
2013-10,2013-10-21,1,1,0.99,38,14
2013-11,2013-11-03,2,4,3.96,4,1
2013-11,2013-11-04,1,4,3.96,8,4
2013-11,2013-11-05,1,6,5.94,14,4
2013-11,2013-11-08,1,9,8.91,23,6
2013-11,2013-11-13,1,14,25.86,37,9
2013-11,2013-11-21,1,1,0.99,38,14
2013-12,2013-12-04,2,4,3.96,4,1
2013-12,2013-12-05,1,4,3.96,8,4
2013-12,2013-12-06,1,6,5.94,14,4
2013-12,2013-12-09,1,9,8.91,23,6
2013-12,2013-12-14,1,14,13.86,37,9
2013-12,2013-12-22,1,1,1.99,38,14

