prql-compiler/tests/integration/snapshots/integration__tests__rdbms@pipelines.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: result_string
input_file: prql-compiler/tests/integration/queries/pipelines.prql
---
0,20
0,21
0,22
1,23
1,24
1,25

