prql-compiler/tests/integration/snapshots/integration__tests__rdbms@switch.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: result_string
input_file: prql-compiler/tests/integration/queries/switch.prql
---
Samuel Rosa,1071
no composer,4884
no composer,6373
no composer,6635
L. Muggerud,7941
no composer,11650
L. Muggerud,21211
unknown composer,29048
Gilberto Gil,32287
Chico Science,33149

