prql-compiler/tests/integration/snapshots/integration__tests__test@distinct.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: sqlite_out
input_file: prql-compiler/tests/integration/queries/distinct.prql
---
album_id,genre_id
1,1
2,1
3,1
4,1
5,1
6,1
7,1
8,2
9,3
10,1
11,4
12,5
13,2
14,3
15,3
16,3
17,3
18,4
19,3
20,6
21,7
22,7
23,7
24,7
25,7
26,8
27,8
28,7
29,9
30,1
31,1
32,10
33,7
34,7
35,3
36,1
37,1
38,2
39,4
40,1
41,7
42,4
43,1
44,1
45,7
46,1
47,7
48,2
49,2
50,1
51,2
52,11
53,7
54,1
55,1
56,7
57,7
58,1
59,1
60,1
61,1
62,1
63,1
64,1
65,1
66,1
67,1
68,2
69,7
70,7
71,7
72,6
73,6
73,7
74,4
75,4
76,1
77,4
78,7
79,1
80,1
81,4
82,1
83,12
84,7
85,10
86,7
87,2
88,3
89,4
90,1
91,1
92,3
93,2
94,1
95,3
96,3
97,1
98,13
99,1
