prql-compiler/tests/integration/snapshots/integration__tests__test@genre_counts.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "sqlite::query_csv(&sqlite_conn, &sql)"
input_file: prql-compiler/tests/integration/queries/genre_counts.prql
---
a
-25
