prql-compiler/tests/integration/snapshots/integration__tests__test@group_all.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: sqlite_out
input_file: prql-compiler/tests/integration/queries/group_all.prql
---
album_id,title,price
1,For Those About To Rock We Salute You,9.9
2,Balls to the Wall,0.99
3,Restless and Wild,2.97
4,Let There Be Rock,7.92
5,Big Ones,14.85
6,Jagged Little Pill,12.87
7,Facelift,11.88
8,Warner 25 Anos,13.86
9,Plays Metallica By Four Cellos,7.92
10,Audioslave,13.86
