prql-compiler/tests/integration/snapshots/integration__tests__test@loop.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: sqlite_out
input_file: prql-compiler/tests/integration/queries/loop.prql
---
n
-2
0
2
4
6
8
